tests/ui/extoption_env-not-string-literal.stderr
error: argument must be a string literal
  --> $DIR/extoption_env-not-string-literal.rs:1:25
   |
LL | fn main() { option_env!(10); }
   |                         ^^

error: aborting due to previous error

