tests/ui/extoption_env-not-string-literal.rs
fn main() { option_env!(10); } //~ ERROR: argument must be a string literal
